--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=1200, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@300;500;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    
     <title>С 8 марта</title>
 </head>
 
@@ -16,15 +22,24 @@
         <div class="card">
             <div class="card__page card__page-front">
                 <div class="card__page card__page-outside">
-                    hh
+
                 </div>
                 <div class="card__page card__page-inside">
-                    hp
+
                 </div>
             </div>
             <div class="card__page card__page-bottom">
-                c 8 марта <br>
-                любимая мама
+                Поздравляю с 8 Марта,<br>
+                Мама милая моя!<br>
+                Я желаю тебе счастья,<br>
+                Света, мира и тепла.<br>
+                <p>
+                    Чтоб ты чаще улыбалась<br>
+                    И не думала грустить.<br>
+                    Твою теплую улыбку<br>
+                    Буду я всегда любить.<br>
+                </p>
+
             </div>
         </div>
     </div>
